k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-2048-deployment
  labels:
    app: eks-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-2048
  template:
    metadata:
      labels:
        app: eks-2048
    spec:
      containers:
        - name: eks-2048
          image: 207567788282.dkr.ecr.eu-west-2.amazonaws.com/ecr-eks-2048:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
