k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-2048-service
spec:
  selector:
    app: eks-2048
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
